dropzone does not start chunking until upload button is pressed

--- a/ChunkUpload/Pages/Index.cshtml
+++ b/ChunkUpload/Pages/Index.cshtml
@@ -11,20 +11,31 @@
 <form asp-page-handler="Upload" enctype="multipart/form-data" id="dropzone" class="dropzone">
 </form>
 
+<button class="upload">Upload</button>
 
 
 @section Scripts {
     <script src="https://cdn.jsdelivr.net/npm/dropzone@5.7.2/dist/dropzone.min.js"></script>
     <script>
         Dropzone.autoDiscover = false;
+        let dropZone = null;
+
+        function chunk() {
+            dropZone.processQueue();
+        }
 
         $(document).ready(function () {
-            $("#dropzone").dropzone({                
+            let element = document.getElementById("dropzone");
+            dropZone = new Dropzone(element, {                
                 chunking: true,
                 chunkSize: 30000,
                 retryChunks: true,
-                maxFilesize: 2000000000 // 2 gig max file size
+                maxFilesize: 2000000000, // 2 gig max file size
+                autoProcessQueue: false // this stops the chunks from immediate upload
             });
+
+            // upload button event listener
+            $('.upload').on('click', chunk);
         });
     </script>
 }  
