add remove link on all files to be used before upload

--- a/ChunkUpload/Pages/Index.cshtml
+++ b/ChunkUpload/Pages/Index.cshtml
@@ -30,6 +30,7 @@
                 chunking: true,
                 chunkSize: 30000,
                 retryChunks: true,
+                addRemoveLinks: true, // this adds link to remove file from dropzone
                 maxFilesize: 2000000000, // 2 gig max file size
                 autoProcessQueue: false // this stops the chunks from immediate upload
             });
