--- a/ChunkUpload/Pages/Index.cshtml
+++ b/ChunkUpload/Pages/Index.cshtml
@@ -8,10 +8,35 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/dropzone@5.7.2/dist/dropzone.css" integrity="sha256-3SE+Qz2RvIa5gOHSNS50MUTTzRAOYREA5+DOmMNFPYk=" crossorigin="anonymous">
 }
 
-<form asp-page-handler="Upload" enctype="multipart/form-data" id="dropzone" class="dropzone">
+<form id="dropzone" 
+      method="post" 
+      action="files/upload" 
+      enctype="multipart/form-data" 
+      class="dropzone form-group">
 </form>
 
-<button class="upload">Upload</button>
+<button id="upload" class="btn btn-primary">Upload</button>
+
+<hr />
+
+<form id="uploadForm" 
+      method="post"
+      action="files/upload"
+      enctype="multipart/form-data" 
+      onsubmit="stream(this); return false;">
+    
+    <div class="form-group">
+        <label for="file">File streaming</label>
+        <input  id="file" name="file" type="file" class="form-control-file"/>
+    </div>
+    
+    <div class="form-group">
+        <input class="btn btn-primary" type="submit" value="Upload" />
+    </div>
+
+</form>
+
+<hr/>
 
 <h3>links don't work...</h3>
 <p>In blob storage, container uses default permissions, which is private. You'd need a SAS or change container permission.</p>
@@ -65,23 +90,51 @@
         Dropzone.autoDiscover = false;
         let dropZone = null;
 
-        function chunk() {
+        function getCookie(name) {
+            const value = `; ${document.cookie}`;
+            const parts = value.split(`; ${name}=`);
+            if (parts.length !== 2) {
+                return null;
+            }
+
+            return parts.pop().split(";").shift();
+        }
+
+        function upload() {
             dropZone.processQueue();
         }
 
-        $(document).ready(function () {
-            let element = document.getElementById("dropzone");
-            dropZone = new Dropzone(element, {                
-                chunking: true,
-                chunkSize: 300000,
-                retryChunks: true,
-                addRemoveLinks: true, // this adds link to remove file from dropzone
-                maxFilesize: 2000000000, // 2 gig max file size
-                autoProcessQueue: false // this stops the chunks from immediate upload
-            });
+        async function stream(form) {
+            const formData = new FormData(form);
+
+            try {
+                const response = await fetch(form.action,
+                    {
+                        method: form.method,
+                        body: formData,
+                        headers: {
+                            'RequestVerificationToken': getCookie('RequestVerificationToken')
+                        }
+                    });
+
+                console.log(response);
+            } catch (error) {
+                console.error(error);
+            }
+        }
+
+        $(document).ready(function() {
+            const element = document.getElementById("dropzone");
+            dropZone = new Dropzone(element,
+                {
+                    timeout: 3600000,
+                    addRemoveLinks: true, // this adds link to remove file from dropzone
+                    maxFilesize: 10485760, // 10 gig max file size
+                    autoProcessQueue: false // this stops the chunks from immediate upload
+                });
 
             // upload button event listener
-            $('.upload').on('click', chunk);
+            $('#upload').on('click', upload);
         });
     </script>
 }  
