resolve uncomitted blobs

--- a/ChunkUpload/Pages/Index.cshtml
+++ b/ChunkUpload/Pages/Index.cshtml
@@ -36,6 +36,10 @@
 
 </form>
 
+<form asp-page-handler="ResolveUncommitted">
+    <button class="btn btn-secondary" type="submit">Resolve Uncommitted</button>
+</form>
+
 <hr/>
 
 <h3>links don't work...</h3>
